--- a/index.html
+++ b/index.html
@@ -91,20 +91,20 @@
           <div class="service-images">
             <a href="service.html" class="img-content">
               <div class="img">
-                <img src="/image/hair_styling.jpg" alt="hair_styling" />
+                <img src="image/hair_styling.jpg" alt="hair_styling" />
               </div>
               <div class="content">Hair Styling</div>
             </a>
             <a href="service.html" class="img-content">
               <div class="img">
-                <img src="/image/hair_cuts.jpg" alt="hair_cuts" />
+                <img src="image/hair_cuts.jpg" alt="hair_cuts" />
               </div>
               <div class="content">Hair Cuts</div>
             </a>
             <a href="service.html" class="img-content">
               <div class="img">
                 <img
-                  src="/image/hair_strightening.jpg"
+                  src="image/hair_strightening.jpg"
                   alt="hair_strightening"
                 />
               </div>
@@ -112,19 +112,19 @@
             </a>
             <a href="service.html" class="img-content">
               <div class="img">
-                <img src="/image/hair_spa.jpg" alt="hair_spa" />
+                <img src="image/hair_spa.jpg" alt="hair_spa" />
               </div>
               <div class="content">Hair Spa</div>
             </a>
             <a href="service.html" class="img-content">
               <div class="img">
-                <img src="/image/hair_treatments.jpg" alt="hair_treatments" />
+                <img src="image/hair_treatments.jpg" alt="hair_treatments" />
               </div>
               <div class="content">Hair Treatments</div>
             </a>
             <a href="service.html" class="img-content">
               <div class="img">
-                <img src="/image/hair_colouring.jpg" alt="hair_colouring" />
+                <img src="image/hair_colouring.jpg" alt="hair_colouring" />
               </div>
               <div class="content">Hair Colouring</div>
             </a>
