--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
         <span class="material-symbols-outlined menu-btn" onclick="toggleNav()">
           menu
-          </span>
+        </span>
       <nav>
           <a href="#home">Home</a>
           <a href="#about">About</a>
@@ -41,8 +41,7 @@
             quos distinctio, sed perferendis alias cupiditate? Eius, ex. Dicta
             molestias veniam officia 
           </p>
-           
-          <a class="btn" href="#home">Contact Us</a>
+          <div class="banner_btn"><a class="btn" href="#home">Contact Us</a></div>
         </div>
       </section>
       <!-- section 2 -->
@@ -59,7 +58,6 @@
                 Molestiae esse dolores necessitatibus reiciendis, saepe praesentium tempora, dolor dicta recusandae iste placeat porro <br><br> laboriosam corrupti repellat quo. Aspernatur, impedit. Recusandae perspiciatis ratione quas aspernatur harum in neque non libero.
                 D rem itaque perferendis volupt
               </p>
-
               <div class="icon_container">
                  <div>
                   <img src="image/salon.png" alt="salon icon">
