--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <h2>CONTACT US</h2>
         <div class="contact-wrap"> 
           <div class="contact-sec1">
-            <img src="image/hairdresser-taking-care-her-client.jpg" alt="">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15650.972788547257!2d75.77856019481705!3d11.280278272410477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba65eb7fd29371b%3A0xf6b96c194dfeccfd!2sEranhippalam%2C%20Kozhikode%2C%20Kerala!5e0!3m2!1sen!2sin!4v1707201562632!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div> 
           <div class="contact-sec2">
             <h3>GET IN TOUCH</h3>
